fixed sidebar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,8 @@ label{
   box-shadow: 5px 5px 5px #000000; 
   
 }
+
+.submitbutton{
+  margin-left: 137px;
+  margin-top:20px;
+}
